--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,60 +1,33 @@
 {
-	"name": "Spaceship Titanic Python",
-	"build": {
-		"dockerfile": "dockerfile"
-	},
+    "name": "Spaceship Titanic",
+    "build": {
+        "dockerfile": "dockerfile"
+    },
 
-	// Set *default* container specific settings.json values on container create.
-	"settings": {
-		// "r.rterm.linux": "/usr/local/bin/radian",
-		// "r.bracketedPaste": true,
-		// "r.plot.useHttpgd": true,
-		// "[r]": {
-		// 	"editor.wordSeparators": "`~!@#%$^&*()-=+[{]}\\|;:'\",<>/?"
-		// },
-        "jupyter.sendSelectionToInteractiveWindow": true,
-        //change the name of the environment in line below to match what you have in the environment.yml file
-		"python.defaultInterpreterPath": "/usr/local/bin/python",
-		"python.linting.pylintPath": "/usr/local/bin/pylint",
-		"python.languageServer": "Pylance",
-		"python.linting.enabled": true,
-		"python.linting.pylintEnabled": true
-	},
-
-	// Add the IDs of extensions you want installed when the container is created.
-	"extensions": [
-		// Add Jupyter, R and Python vscode extensions
-		// "REditorSupport.r",
-		// "rdebugger.r-debugger",
-		"ms-toolsai.jupyter",
-		"ms-toolsai.jupyter-renderers",
-		"ms-python.python",
-		"ms-python.vscode-pylance",
-		"vsls-contrib.codetour"
-	],
-
-	// Forward Jupyter and RStudio ports
-	"forwardPorts": [8888],
-	"portsAttributes": {
-		// "8787": {
-		// 	"label": "Rstudio",
-		// 	"requireLocalPort": true,
-		// 	"onAutoForward": "ignore"
-		// },
+    "customizations": {
+        "vscode": {
+            "settings": {
+                "jupyter.interactiveWindow.textEditor.executeSelection": true,
+                "python.defaultInterpreterPath": "/usr/local/bin/python",
+                "python.linting.pylintPath": "/usr/local/bin/pylint",
+                "python.languageServer": "Pylance",
+                "python.linting.enabled": true,
+                "python.linting.pylintEnabled": true
+            },
+            "extensions": [
+                "ms-python.python",
+                "ms-python.vscode-pylance",
+                "ms-toolsai.jupyter",
+                "ms-toolsai.jupyter-renderers"
+            ]
+        }
+    },
+    "forwardPorts": [8888],
+    "portsAttributes": {
         "8888": {
-			"label": "Jupyter",
-			"requireLocalPort": true,
-			"onAutoForward": "ignore"
-		}
-	},
-
-	// Use 'postCreateCommand' to run commands after the container is created.
-	// "postCreateCommand": "sudo rstudio-server start",
-	// "postCreateCommand": "pip3 install -r requirements.txt",
-
-	// Use 'postStartCommand' to run commands after a container has started.
-	// "postStartCommand": "sudo service rstudio-server restart",
-
-	// Comment out to connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
-	// "remoteUser": "rstudio"
+            "label": "jupyter",
+            "requireLocalPort": true,
+            "onAutoForward": "ignore"
+        }
+    }
 }
